--- a/.github/workflows/fetcher.yml
+++ b/.github/workflows/fetcher.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   update:
+    defaults:
+      run:
+        working-directory: ./fetcher
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo content
