--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "firebase": "^9.9.3",
     "next": "12.2.5",
     "react": "18.2.0",
