--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^9.9.3",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "eslint": "8.23.0",
