--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "test": "jest"
   },
   "dependencies": {
     "bootstrap": "^5.2.0",
@@ -18,9 +18,14 @@
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.18",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
+    "node-mocks-http": "^1.11.0",
     "typescript": "^4.8.3"
   }
 }
