:green_heart: Fixed messed up configuration on branches

--- a/.github/workflows/vercel-prod.yml
+++ b/.github/workflows/vercel-prod.yml
@@ -1,5 +1,9 @@
 name: deploy website
-on: [push]
+on:
+  push:
+    branches:
+      - master
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
