--- a/.github/workflows/vercel-prod.yml
+++ b/.github/workflows/vercel-prod.yml
@@ -16,5 +16,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
+          token: ${{ secrets.MY_GH_PAT }}
           node-version: 16
       - run: npx vercel --prod --token ${{ env.VERCEL_TOKEN }} >> $GITHUB_STEP_SUMMARY
