--- a/.github/workflows/fetcher.yml
+++ b/.github/workflows/fetcher.yml
@@ -42,7 +42,7 @@ jobs:
           branch: main
 
       - name: telegram notify
-        uses: fjogeleit/http-request-action@v1.11.1
+        uses: fjogeleit/http-request-action@v1.12.0
         with:
           url: 'https://api.telegram.org/bot${{secrets.TELE_BOT_API_KEY}}/sendMessage'
           method: 'POST'
@@ -50,5 +50,5 @@ jobs:
             "chat_id": -1001220707105,
             "parse_mode": "MarkdownV2",
             "disable_web_page_preview": true,
-            "text": "${{github.workflow}} *completed* \uD83C\uDF89 Latest data updated\\. Triggered by `${{github.event_name}}`\\. View [website](https:\/\/mpt-backup-api.herokuapp.com) or [action runs](https:\/\/github.com\/${{github.repository}}\/actions\/runs\/${{github.run_id}})\\."
+            "text": "${{github.workflow}} *completed* \uD83C\uDF89 Latest data updated\\. Triggered by `${{github.event_name}}`\\. View [mpt-server](https:\/\/mpt-server.vercel.app/) or [action runs](https:\/\/github.com\/${{github.repository}}\/actions\/runs\/${{github.run_id}})\\."
             }'
