--- a/.github/workflows/vercel-prod.yml
+++ b/.github/workflows/vercel-prod.yml
@@ -1,12 +1,17 @@
 name: deploy live website
 on:
   workflow_dispatch: # manual trigger
+  workflow_run: # triggered by fetcher.yml when success
+    workflows: [ "Fetch latest data" ]
+    types:
+      - completed
   push:
     branches:
       - master
       - main
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     env:
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
