--- a/.github/workflows/vercel-prod.yml
+++ b/.github/workflows/vercel-prod.yml
@@ -1,17 +1,12 @@
-name: deploy live website
+name: 'Deploy (Production)'
 on:
   workflow_dispatch: # manual trigger
-  workflow_run: # triggered by fetcher.yml when success
-    workflows: [ "Fetch latest data" ]
-    types:
-      - completed
   push:
     branches:
       - master
       - main
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     env:
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
@@ -21,6 +16,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          token: ${{ secrets.MY_GH_PAT }}
           node-version: 16
       - run: npx vercel --prod --token ${{ env.VERCEL_TOKEN }} >> $GITHUB_STEP_SUMMARY
