--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@vercel/analytics": "^1.0.0",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.3",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "swr": "^1.3.0",
     "toastify-js": "^1.12.0"
   },
@@ -26,7 +26,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.18",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "latest",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "node-mocks-http": "^1.11.0",
