--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.3",
     "next": "latest",
+    "polygon-lookup": "^2.6.0",
     "react": "latest",
     "react-dom": "latest",
     "swr": "^1.3.0",
