:truck: Rename endpoint to /gps
Finish MVP feature

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.0.0",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.3",
+    "haversine-distance": "^1.2.1",
     "next": "latest",
     "polygon-lookup": "^2.6.0",
     "react": "latest",
