:zap: Move source to fetch for jakim zones
Now, the zones are fetched from https://github.com/mptwaktusolat/jakim-zones-grabber

Added axios

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.0.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.3",
     "haversine-distance": "^1.2.1",
