--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "polygon-lookup": "^2.6.0",
     "react": "latest",
     "react-dom": "latest",
+    "react-loader-spinner": "^5.3.4",
     "swr": "^1.3.0",
     "toastify-js": "^1.12.0"
   },
