--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.4.0",
     "firebase": "^9.9.3",
+    "handlebars": "^4.7.8",
     "next": "latest",
     "polygon-lookup": "^2.6.0",
+    "puppeteer-core": "^21.5.2",
     "react": "latest",
     "react-dom": "latest",
     "react-loader-spinner": "^5.3.4",
