--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@scalar/api-reference": "^1.12.7",
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.4.0",
     "firebase": "^9.9.3",
@@ -20,7 +21,8 @@
     "react-dom": "latest",
     "react-loader-spinner": "^5.3.4",
     "swr": "^1.3.0",
-    "toastify-js": "^1.12.0"
+    "toastify-js": "^1.12.0",
+    "veaury": "^2.3.12"
   },
   "stackblitz": {
     "startCommand": "yarn install && yarn dev"
