--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.18",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "eslint": "8.23.0",
     "eslint-config-next": "latest",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "node-mocks-http": "^1.11.0",
-    "typescript": "^4.8.3"
+    "typescript": "^5.3.3"
   }
 }
