:bug: Fix cannot render Scalar https://github.com/scalar/scalar/discussions/732

--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "jest-environment-jsdom": "^29.0.2",
     "node-mocks-http": "^1.11.0",
     "typescript": "^5.3.3"
-  }
+  },
+  "resolutions": {
+    "vue": "3.3.13"
+  },
+  "packageManager": "yarn@4.0.2"
 }
