--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "puppeteer-core": "^21.5.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.3.4",
     "swr": "^1.3.0",
     "toastify-js": "^1.12.0",
@@ -33,11 +34,14 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.23.0",
     "eslint-config-next": "latest",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "node-mocks-http": "^1.11.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "resolutions": {
