--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@scalar/api-reference": "^1.12.7",
+    "@scalar/api-reference": "1.17.8",
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.4.0",
     "firebase": "^9.9.3",
@@ -43,9 +43,6 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
-  },
-  "resolutions": {
-    "vue": "3.3.13"
   },
   "packageManager": "yarn@4.1.0"
 }
