:arrow_up: Upgrade scalar package to fix visual regression https://github.com/scalar/scalar/issues/1097

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@scalar/api-reference": "1.17.8",
+    "@scalar/api-reference": "^1.17.14",
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.4.0",
     "firebase": "^9.9.3",
