--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@scalar/api-reference": "^1.17.16",
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^9.9.3",
     "handlebars": "^4.7.8",
+    "lucide-react": "^0.468.0",
     "next": "latest",
     "polygon-lookup": "^2.6.0",
     "puppeteer-core": "^21.5.2",
@@ -21,7 +25,10 @@
     "react-dom": "latest",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.3.4",
+    "react-spinners": "^0.15.0",
     "swr": "^1.3.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "toastify-js": "^1.12.0",
     "veaury": "^2.3.12"
   },
