--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@scalar/api-reference": "^1.17.16",
     "@vercel/analytics": "^1.0.0",
@@ -25,7 +26,6 @@
     "react-dom": "latest",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.3.4",
-    "react-spinners": "^0.15.0",
     "swr": "^1.3.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
